# MeetingRecord

./: .env.example  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cap/: 0429.csv  ConferenceViewLog_丰台教委视频会议1617_20260428143010_93fa0a83-dcff-4f91-8b49-09f26d1c2127.csv  h239_trace.txt  h245_window.txt
config/: config.json
docs/: H264_Architecture_Design.md  README.md  RELEASE_NOTES_v2.0.md  TEST_REPORT_v3_20260423.md  api.md  architecture.md  architecture_and_optimization.md  deployment.md  development.md  late-join-h239-fix.md  operations.md  services.md
scripts/: README.md  analyze_old_pcap.ps1  analyze_pcap.ps1  analyze_pcap.sh  analyze_te.ps1  askpass.cmd  askpass.sh  build.sh  build_g722.ps1  check_g722.ps1  check_hangup.ps1  check_ldd.ps1  check_logs.ps1  check_plugins.ps1  chk_rtmp.c  cleanup_recordings.py  ctrl_query.py  deploy_104.ps1  deploy_104.sh  deploy_to_102.ps1  extract_hex.ps1  faststart_existing.sh  find_g722.ps1  get_log.ps1  get_log.sh  install_asr.ps1  install_deps.sh  install_deps_server.sh  install_g722.ps1  install_web.sh  load_env.ps1  load_env.sh  nginx-recorder.conf.example  recorder-cleanup.service  recorder-cleanup.timer  redeploy.sh  run.ps1  run_deploy.ps1  run_tcpdump.ps1  run_verify_h239.ps1  (+15 more)
scripts/asr/: asr_offline.py  hotwords_default.txt  install_asr.sh  recorder-asr-bridge.py  recorder-asr-bridge.service  recorder-asr.service
src/: main.cpp
src/config/: AppConfig.h  ConfigLoader.cpp  ConfigLoader.h
src/h323/: AACLDRecvCap.h  H261RecvCodec.cpp  H261RecvCodec.h  H264RecvCodec.cpp  H264RecvCodec.h  RecorderConnection.cpp  RecorderConnection.h  RecorderEndpoint.cpp  RecorderEndpoint.h
src/media/: AudioCapturePChannel.cpp  AudioCapturePChannel.h  AudioLevelMeter.cpp  AudioLevelMeter.h  AudioSoundChannel.cpp  AudioSoundChannel.h  FfmpegRecorder.cpp  FfmpegRecorder.h  Mp4Faststart.cpp  Mp4Faststart.h  SrsStreamer.cpp  SrsStreamer.h  VideoCapturePChannel.cpp  VideoCapturePChannel.h  VideoOutputDevice.cpp  VideoOutputDevice.h  VideoSender.cpp  VideoSender.h  VideoSourceChannel.cpp  VideoSourceChannel.h
src/meeting/: MeetingRegistry.cpp  MeetingRegistry.h
src/tcp/: ControlServer.cpp  ControlServer.h
src/util/: Logger.h  PixelFont.h
web/: app.py  auth.py  recorder-core.service  recorder-restart.path  recorder-restart.service  recorder-web.service  recorder-web.sudoers  recorder_client.py  requirements.txt  setup_user.py
web/static/: dashboard.js  live.js  player.js  style.css  vu.js
web/templates/: base.html  config.html  dashboard.html  live.html  login.html  meeting.html  recordings.html
